--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -218,9 +218,9 @@ jobs:
             done
             
             echo '[Deploy] Waiting for complete cleanup'
-            sleep 3
+            sleep 5
             
-            # Final verification
+            # Final verification with extended wait
             if command -v lsof >/dev/null 2>&1 && lsof -ti:8080 >/dev/null 2>&1; then
               echo '[Deploy] WARNING: Port 8080 still occupied, but continuing'
               lsof -i:8080 2>/dev/null || true
@@ -237,6 +237,24 @@ jobs:
             }
             LOG_FILE=\"\$LOG_DIR/eassist-api.out\"
             
+            echo '[Deploy] Final port check before starting service'
+            # Double-check port is free right before starting
+            for final_check in \$(seq 1 5); do
+              if command -v lsof >/dev/null 2>&1 && lsof -ti:8080 >/dev/null 2>&1; then
+                echo '[Deploy] Port 8080 occupied during final check, attempt '\$final_check'/5'
+                PORT_PIDS=\$(lsof -ti:8080 2>/dev/null)
+                echo '[Deploy] PIDs using port 8080: '\$PORT_PIDS
+                for pid in \$PORT_PIDS; do
+                  echo '[Deploy] Force killing PID '\$pid' in final check'
+                  kill -9 \"\$pid\" 2>/dev/null || true
+                done
+                sleep 2
+              else
+                echo '[Deploy] Port 8080 confirmed free for service start'
+                break
+              fi
+            done
+            
             echo '[Deploy] Starting service (log: '\$LOG_FILE')'
             cd ${{ env.DEPLOY_PATH }}
             
@@ -248,12 +266,15 @@ jobs:
             echo \$NEW_PID > \"\$PID_FILE\"
             echo '[Deploy] Started service with PID: '\$NEW_PID' (saved to '\$PID_FILE')'
             
-            # Verify process started
-            sleep 3
+            # Verify process started - increase wait time
+            sleep 5
             if ! kill -0 \"\$NEW_PID\" 2>/dev/null; then
               echo '[Deploy] ERROR: Service failed to start'
               echo '[Deploy] Log output:'
               tail -50 \"\$LOG_FILE\" 2>/dev/null || echo 'No logs available'
+              echo '[Deploy] Checking if port was in use:'
+              lsof -i:8080 2>/dev/null || echo 'No processes on port 8080'
+              netstat -tulpn 2>/dev/null | grep 8080 || echo 'No netstat results for 8080'
               rm -f \"\$PID_FILE\"
               exit 1
             fi
