--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -237,44 +237,133 @@ jobs:
             }
             LOG_FILE=\"\$LOG_DIR/eassist-api.out\"
             
-            echo '[Deploy] Final port check before starting service'
-            # Double-check port is free right before starting
-            for final_check in \$(seq 1 5); do
-              if command -v lsof >/dev/null 2>&1 && lsof -ti:8080 >/dev/null 2>&1; then
-                echo '[Deploy] Port 8080 occupied during final check, attempt '\$final_check'/5'
-                PORT_PIDS=\$(lsof -ti:8080 2>/dev/null)
-                echo '[Deploy] PIDs using port 8080: '\$PORT_PIDS
-                for pid in \$PORT_PIDS; do
-                  echo '[Deploy] Force killing PID '\$pid' in final check'
-                  kill -9 \"\$pid\" 2>/dev/null || true
-                done
-                sleep 2
+            echo '[Deploy] Comprehensive port liberation before service start'
+            # More aggressive port clearing with OS-level wait
+            for liberation_attempt in \$(seq 1 10); do
+              echo '[Deploy] Port liberation attempt '\$liberation_attempt'/10'
+              
+              # Kill anything on port 8080 with all available methods
+              if command -v lsof >/dev/null 2>&1; then
+                ALL_PIDS=\$(lsof -ti:8080 2>/dev/null)
+                if [ -n \"\$ALL_PIDS\" ]; then
+                  echo '[Deploy] Eliminating PIDs on 8080: '\$ALL_PIDS
+                  echo \"\$ALL_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                fi
+              fi
+              
+              # Use fuser with maximum aggression
+              if command -v fuser >/dev/null 2>&1; then
+                fuser -k -9 8080/tcp 2>/dev/null || true
+              fi
+              
+              # Use ss command if available (more modern than netstat)
+              if command -v ss >/dev/null 2>&1; then
+                SS_PIDS=\$(ss -tulpn | grep :8080 | awk '{print \$6}' | cut -d',' -f2 | cut -d'=' -f2 2>/dev/null || true)
+                if [ -n \"\$SS_PIDS\" ]; then
+                  echo '[Deploy] SS found PIDs: '\$SS_PIDS
+                  echo \"\$SS_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                fi
+              fi
+              
+              # Wait for OS to completely release the port
+              sleep 1
+              
+              # Test if we can actually bind to the port
+              echo '[Deploy] Testing port 8080 availability'
+              if command -v python3 >/dev/null 2>&1; then
+                PORT_TEST=\$(python3 -c \"
+import socket
+import sys
+try:
+    s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+    s.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+    s.bind(('', 8080))
+    s.close()
+    print('PORT_FREE')
+except Exception as e:
+    print('PORT_BUSY')
+    sys.exit(1)
+\" 2>/dev/null || echo 'PORT_BUSY')
+                
+                if [ \"\$PORT_TEST\" = \"PORT_FREE\" ]; then
+                  echo '[Deploy] ✅ Port 8080 is bindable - proceeding with service start'
+                  break
+                else
+                  echo '[Deploy] ❌ Port 8080 still not bindable, attempt '\$liberation_attempt'/10'
+                fi
               else
-                echo '[Deploy] Port 8080 confirmed free for service start'
-                break
+                # Fallback test using nc
+                if command -v nc >/dev/null 2>&1; then
+                  if nc -z localhost 8080 2>/dev/null; then
+                    echo '[Deploy] Port 8080 still responding, attempt '\$liberation_attempt'/10'
+                  else
+                    echo '[Deploy] ✅ Port 8080 not responding - proceeding'
+                    break
+                  fi
+                else
+                  # Final fallback - just wait longer
+                  echo '[Deploy] No port test available, waiting longer'
+                  sleep 2
+                  break
+                fi
+              fi
+              
+              if [ \$liberation_attempt -eq 10 ]; then
+                echo '[Deploy] ⚠️  Port liberation failed after 10 attempts, trying anyway'
               fi
             done
             
-            echo '[Deploy] Starting service (log: '\$LOG_FILE')'
+            echo '[Deploy] Starting service with retry logic (log: '\$LOG_FILE')'
             cd ${{ env.DEPLOY_PATH }}
             
-            # Start service and capture PID properly
-            NODE_ENV=production PORT=8080 nohup npm start >\"\$LOG_FILE\" 2>&1 &
-            NEW_PID=\$!
+            # Try starting the service with multiple attempts
+            SERVICE_STARTED=0
+            for start_attempt in \$(seq 1 3); do
+              echo '[Deploy] Service start attempt '\$start_attempt'/3'
+              
+              # Start service and capture PID properly
+              NODE_ENV=production PORT=8080 nohup npm start >\"\$LOG_FILE\" 2>&1 &
+              NEW_PID=\$!
+              
+              # Give it a moment to start or fail
+              sleep 3
+              
+              # Check if the process is still running
+              if kill -0 \"\$NEW_PID\" 2>/dev/null; then
+                echo '[Deploy] ✅ Service process is running with PID: '\$NEW_PID
+                
+                # Save PID for next deployment
+                echo \$NEW_PID > \"\$PID_FILE\"
+                echo '[Deploy] PID saved to '\$PID_FILE
+                SERVICE_STARTED=1
+                break
+              else
+                echo '[Deploy] ❌ Service start attempt '\$start_attempt' failed'
+                echo '[Deploy] Log from failed attempt:'
+                tail -20 \"\$LOG_FILE\" 2>/dev/null || echo 'No logs available'
+                
+                if [ \$start_attempt -lt 3 ]; then
+                  echo '[Deploy] Waiting 5 seconds before retry'
+                  sleep 5
+                  # Additional port cleanup before retry
+                  if command -v fuser >/dev/null 2>&1; then
+                    fuser -k -9 8080/tcp 2>/dev/null || true
+                  fi
+                fi
+              fi
+            done
             
-            # Save PID for next deployment
-            echo \$NEW_PID > \"\$PID_FILE\"
-            echo '[Deploy] Started service with PID: '\$NEW_PID' (saved to '\$PID_FILE')'
-            
-            # Verify process started - increase wait time
-            sleep 5
-            if ! kill -0 \"\$NEW_PID\" 2>/dev/null; then
-              echo '[Deploy] ERROR: Service failed to start'
-              echo '[Deploy] Log output:'
+            # Final verification
+            if [ \$SERVICE_STARTED -eq 0 ]; then
+              echo '[Deploy] ERROR: Service failed to start after 3 attempts'
+              echo '[Deploy] Final log output:'
               tail -50 \"\$LOG_FILE\" 2>/dev/null || echo 'No logs available'
-              echo '[Deploy] Checking if port was in use:'
-              lsof -i:8080 2>/dev/null || echo 'No processes on port 8080'
+              echo '[Deploy] Final port diagnostics:'
+              lsof -i:8080 2>/dev/null || echo 'No lsof results for port 8080'
               netstat -tulpn 2>/dev/null | grep 8080 || echo 'No netstat results for 8080'
+              if command -v ss >/dev/null 2>&1; then
+                ss -tulpn | grep 8080 || echo 'No ss results for 8080'
+              fi
               rm -f \"\$PID_FILE\"
               exit 1
             fi
