--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,45 +140,110 @@ jobs:
             for cleanup_attempt in \$(seq 1 5); do
               echo '[Deploy] Port cleanup attempt '\$cleanup_attempt'/5'
               
+              # Method 1: Use lsof to find and kill processes
               if command -v lsof >/dev/null 2>&1; then
                 PORT_PIDS=\$(lsof -ti:8080 2>/dev/null || true)
                 if [ -n \"\$PORT_PIDS\" ]; then
-                  echo '[Deploy] Found processes on port 8080: '\$PORT_PIDS
+                  echo '[Deploy] Found processes on port 8080 via lsof: '\$PORT_PIDS
                   echo \"\$PORT_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                  sleep 1
                 fi
               fi
               
+              # Method 2: Use fuser to kill processes on port
               if command -v fuser >/dev/null 2>&1; then
+                echo '[Deploy] Using fuser to kill processes on port 8080'
                 fuser -k -9 8080/tcp 2>/dev/null || true
+                sleep 1
               fi
               
+              # Method 3: Use ss and parse PIDs properly
               if command -v ss >/dev/null 2>&1; then
-                SS_PIDS=\$(ss -tulpn 2>/dev/null | grep :8080 | awk '{print \$6}' | cut -d',' -f2 | cut -d'=' -f2 2>/dev/null || true)
-                if [ -n \"\$SS_PIDS\" ]; then
-                  echo '[Deploy] SS found PIDs: '\$SS_PIDS
-                  echo \"\$SS_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                SS_OUTPUT=\$(ss -tulpn 2>/dev/null | grep ':8080 ' || true)
+                if [ -n \"\$SS_OUTPUT\" ]; then
+                  echo '[Deploy] SS output for port 8080: '\$SS_OUTPUT
+                  # Extract PIDs from ss output more carefully
+                  SS_PIDS=\$(echo \"\$SS_OUTPUT\" | awk '{print \$NF}' | grep -o 'pid=[0-9]*' | cut -d'=' -f2 2>/dev/null || true)
+                  if [ -n \"\$SS_PIDS\" ]; then
+                    echo '[Deploy] SS found PIDs: '\$SS_PIDS
+                    echo \"\$SS_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                    sleep 1
+                  fi
                 fi
               fi
               
-              sleep 2
+              # Method 4: Use netstat as fallback
+              if command -v netstat >/dev/null 2>&1; then
+                NETSTAT_PIDS=\$(netstat -tulpn 2>/dev/null | grep ':8080 ' | awk '{print \$NF}' | cut -d'/' -f1 | grep '^[0-9]*\$' 2>/dev/null || true)
+                if [ -n \"\$NETSTAT_PIDS\" ]; then
+                  echo '[Deploy] Netstat found PIDs: '\$NETSTAT_PIDS
+                  echo \"\$NETSTAT_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                  sleep 1
+                fi
+              fi
               
-              # Use a simpler port test method
+              # Method 5: Kill any node processes that might be using port 8080
+              if command -v pgrep >/dev/null 2>&1; then
+                NODE_PIDS=\$(pgrep -f 'node.*server.js' 2>/dev/null || true)
+                if [ -n \"\$NODE_PIDS\" ]; then
+                  echo '[Deploy] Found node server processes: '\$NODE_PIDS
+                  echo \"\$NODE_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                  sleep 1
+                fi
+                
+                NPM_PIDS=\$(pgrep -f 'npm.*start' 2>/dev/null || true)
+                if [ -n \"\$NPM_PIDS\" ]; then
+                  echo '[Deploy] Found npm start processes: '\$NPM_PIDS
+                  echo \"\$NPM_PIDS\" | xargs -r kill -9 2>/dev/null || true
+                  sleep 1
+                fi
+              fi
+              
+              # Wait a bit for processes to die
+              sleep 3
+              
+              # Test if port is now free using multiple methods
+              PORT_FREE=0
+              
+              # Test with nc
               if command -v nc >/dev/null 2>&1; then
                 if ! nc -z localhost 8080 2>/dev/null; then
-                  echo '[Deploy] Port 8080 appears free - proceeding'
-                  break
-                else
-                  echo '[Deploy] Port 8080 still responding, attempt '\$cleanup_attempt'/5'
-                fi
-              else
-                if ! command -v lsof >/dev/null 2>&1 || ! lsof -ti:8080 >/dev/null 2>&1; then
-                  echo '[Deploy] Port 8080 appears free - proceeding'
-                  break
+                  echo '[Deploy] Port 8080 appears free (nc test)'
+                  PORT_FREE=1
                 fi
               fi
               
-              if [ \$cleanup_attempt -eq 5 ]; then
-                echo '[Deploy] Port cleanup completed after 5 attempts'
+              # Test with lsof
+              if [ \$PORT_FREE -eq 0 ] && command -v lsof >/dev/null 2>&1; then
+                if ! lsof -ti:8080 >/dev/null 2>&1; then
+                  echo '[Deploy] Port 8080 appears free (lsof test)'
+                  PORT_FREE=1
+                fi
+              fi
+              
+              # Test with netstat
+              if [ \$PORT_FREE -eq 0 ] && command -v netstat >/dev/null 2>&1; then
+                if ! netstat -ln 2>/dev/null | grep -q ':8080.*LISTEN'; then
+                  echo '[Deploy] Port 8080 appears free (netstat test)'
+                  PORT_FREE=1
+                fi
+              fi
+              
+              if [ \$PORT_FREE -eq 1 ]; then
+                echo '[Deploy] Port 8080 successfully freed after attempt '\$cleanup_attempt
+                break
+              else
+                echo '[Deploy] Port 8080 still in use after attempt '\$cleanup_attempt
+                if [ \$cleanup_attempt -eq 5 ]; then
+                  echo '[Deploy] ⚠️  Final attempt - detailed diagnostics:'
+                  echo '[Deploy] lsof output:'
+                  lsof -i:8080 2>/dev/null || echo 'No lsof results'
+                  echo '[Deploy] netstat output:'
+                  netstat -tulpn 2>/dev/null | grep 8080 || echo 'No netstat results'
+                  echo '[Deploy] ss output:'
+                  ss -tulpn 2>/dev/null | grep 8080 || echo 'No ss results'
+                  echo '[Deploy] Proceeding anyway...'
+                fi
               fi
             done
             
